# QGIS

./: CMakeLists.txt
images/: images.qrc
ms-windows/: nqmap.nsi  nqmap_demo_package.nsi
ms-windows/Installer-Files/: LICENSE.txt
python/: CMakeLists.txt
python/analysis/: analysis.sip  qgspointsample.sip  qgstransectsample.sip
python/core/: conversions.sip  core.sip  qgseditformconfig.sip  qgsfeature.sip  qgsmaplayerregistry.sip  qgsrasterdataprovider.sip  qgsrasterfilewriter.sip  qgssnapper.sip  qgsvectorlayer.sip  qgsvectorlayereditutils.sip  qgsvectorlayerundocommand.sip  symbology-ng-core.sip
python/gui/: gui.sip  qgsaddattrdialog.sip  qgsattributedialog.sip  qgsexpressionbuilderwidget.sip  qgshighlight.sip  qgslegendinterface.sip  qgsmapcanvas.sip  qgsmaptool.sip  qgsmessagelogviewer.sip  qgsnewvectorlayerdialog.sip
python/plugins/: CMakeLists.txt
python/plugins/survey_design/: CMakeLists.txt  __init__.py  metadata.txt  surveydesigndialog.py  surveydesigndialogbase.ui  surveydesignplugin.py  surveydigitizetool.py  surveyevaluation.py  surveyevaluationdialog.py  surveyevaluationdialogbase.ui  surveyinitdialog.py  surveyinitdialogbase.ui
resources/: CMakeLists.txt  customization.ini  niwa_faq.html
scripts/: prepare-commit.sh
src/analysis/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp  qgis_win32.rc  qgisapp.cpp  qgisapp.h  qgsclipboard.cpp  qgscustomization.cpp  qgsdbtablemodel.cpp  qgsdbtablemodel.h  qgsdecorationgrid.cpp  qgsfeatureaction.cpp  qgshighlight.cpp  qgshighlight.h  qgsmaptooladdcircularstring.cpp  qgsmaptooladdcircularstring.h  qgsmaptooladdfeature.cpp  qgsmaptooladdpart.cpp  qgsmaptooladdring.cpp  qgsmaptoolcapture.cpp  qgsmaptoolcapture.h  qgsmaptoolcircularstringcurvepoint.cpp  qgsmaptoolcircularstringcurvepoint.h  qgsmaptoolcircularstringradius.cpp  qgsmaptoolcircularstringradius.h  qgsmaptoolcircularstringthreepoints.cpp  qgsmaptoolcircularstringthreepoints.h  qgsmaptooldeletepart.cpp  qgsmaptooldeletering.cpp  qgsmaptooledit.cpp  qgsmaptooledit.h  qgsmaptoolidentify.cpp  qgsmaptoollabel.cpp  qgsmaptoolmovefeature.cpp  qgsmaptoolnodetool.cpp  qgsmaptoolnodetool.h  qgsmaptooloffsetcurve.cpp  qgsmaptoolselectutils.cpp  qgsmaptoolsimplify.cpp
src/browser/: CMakeLists.txt
src/core/: CMakeLists.txt  qgis.h  qgsapplication.cpp  qgsapplication.h  qgscentralpointpositionmanager.cpp  qgscoordinatereferencesystem.cpp  qgscoordinatetransform.cpp  qgsdatasourceuri.cpp  qgsdatasourceuri.h  qgsdistancearea.cpp  qgsexpression.cpp  qgsexpression.h  qgsexpressionlexer.ll  qgsexpressionparser.yy  qgsfeature.cpp  qgsfeature.h  qgsgeometry.cpp  qgsgeometry.h  qgsgeometryvalidator.cpp  qgsgml.cpp  qgsgml.h  qgslabel.cpp  qgsmaptopixel.cpp  qgsmaptopixel.h  qgsogcutils.cpp  qgsoverlayobject.cpp  qgsowsconnection.h  qgspallabeling.cpp  qgsproviderregistry.cpp  qgsrasterdataprovider.cpp  qgsrasterdataprovider.h  qgssearchtreenode.cpp  qgssnapper.h  qgsvectordataprovider.cpp  qgsvectordataprovider.h  qgsvectorfilewriter.cpp  qgsvectorlayer.cpp  qgsvectorlayer.h  qgsvectorlayereditbuffer.cpp  qgsvectorlayereditutils.cpp  (+8 more)
src/customwidgets/: CMakeLists.txt
src/gui/: CMakeLists.txt  qgsaddattrdialog.cpp  qgsaddattrdialog.h  qgsattributedialog.cpp  qgsattributedialog.h  qgscomposerview.cpp  qgscomposerview.h  qgsexpressionbuilderwidget.cpp  qgsexpressionbuilderwidget.h  qgsgeometryrubberband.cpp  qgsgeometryrubberband.h  qgshighlight.h  qgslegendinterface.h  qgsmaptool.cpp  qgsmaptool.h  qgsmaptoolidentify.cpp  qgsnewvectorlayerdialog.cpp  qgsnewvectorlayerdialog.h  qgsrasterlayersaveasdialog.cpp  qgsrasterlayersaveasdialog.h  qgsrubberband.cpp  qgsrubberband.h  qgsvertexmarker.cpp  qgsvertexmarker.h
src/plugins/niwa/: CMakeLists.txt  addservicedialog.cpp  addservicedialog.h  niwaplugin.cpp  niwaplugin.h  niwaplugindialog.cpp  niwaplugindialog.h  niwaplugindialogbase.ui  resources.qrc
src/plugins/sos/: CMakeLists.txt  qgsaddwfssensorlayerdialog.cpp  qgsaddwfssensorlayerdialog.h  qgsaddwfssensorlayerdialogbase.ui  qgsmaptoolsensorinfo.cpp  qgsmaptoolsensorinfo.h  qgssensorinfodialog.cpp  qgssensorinfodialog.h  qgssensorinfodialogbase.ui  qgssoscapabilities.cpp  qgssoscapabilities.h  qgssosplugin.cpp  qgssosplugin.h  qgssossourceselect.cpp  qgssossourceselect.h  qgssossourceselectbase.ui  qgswatermldata.cpp  qgswatermldata.h  qgswfssensorlayerdialog.cpp  qgswfssensorlayerdialog.h  qgswfssensorlayerdialogbase.ui  resources.qrc
src/plugins/vector_analysis/: CMakeLists.txt  binarytooldialog.cpp  binarytooldialog.h  buffertooldialog.cpp  buffertooldialog.h  convexhulltooldialog.cpp  convexhulltooldialog.h  dissolvetooldialog.cpp  dissolvetooldialog.h  geoprocessingerrordialog.cpp  geoprocessingerrordialog.h  geoprocessingerrordialog.ui  geoprocessingtooldialog.cpp  geoprocessingtooldialog.h  geoprocessingtooldialog.ui  plugin.h  sliverpolygontooldialog.cpp  sliverpolygontooldialog.h  vectoranalysis.cpp  vectoranalysis.h  vectoranalysis.qrc  vectoranalysisutils.cpp  vectoranalysisutils.h
src/providers/: CMakeLists.txt
src/providers/delimitedtext/: CMakeLists.txt  qgsdelimitedtextprovider.cpp
src/providers/gdal/: qgsgdalprovider.cpp  qgsgdalprovider.h
src/providers/gpx/: CMakeLists.txt
src/providers/memory/: CMakeLists.txt
src/providers/mssql/: CMakeLists.txt
src/providers/ogr/: CMakeLists.txt  qgsogrprovider.cpp
src/providers/oracle/: CMakeLists.txt
src/providers/osm/: CMakeLists.txt  osmprovider.cpp
src/providers/postgres/: CMakeLists.txt  qgspgtablemodel.cpp  qgspostgresconn.cpp  qgspostgresfeatureiterator.cpp  qgspostgresprovider.cpp  qgspostgresprovider.h
src/providers/sos/: CMakeLists.txt  qgssosdata.cpp  qgssosdata.h  qgssosfeatureiterator.cpp  qgssosfeatureiterator.h  qgssosprovider.cpp  qgssosprovider.h
src/providers/spatialite/: CMakeLists.txt
src/providers/sqlanywhere/: CMakeLists.txt
src/providers/wcs/: CMakeLists.txt
src/providers/wfs/: CMakeLists.txt  qgswfscapabilities.cpp  qgswfscapabilities.h  qgswfsprovider.cpp  qgswfsprovider.h  qgswfssourceselect.cpp
src/providers/wms/: CMakeLists.txt  qgswmsprovider.cpp
(+280 files in other folders)
