# override default path where built files are put to allow running qgis without installing
SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${QGIS_OUTPUT_DIRECTORY}/${QGIS_PLUGIN_SUBDIR})
SET (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${QGIS_OUTPUT_DIRECTORY}/${QGIS_PLUGIN_SUBDIR})

#ADD_SUBDIRECTORY(memory) #new_geometry
ADD_SUBDIRECTORY(ogr)
ADD_SUBDIRECTORY(wms)
ADD_SUBDIRECTORY(delimitedtext)
#ADD_SUBDIRECTORY(osm) #new_geometry
#ADD_SUBDIRECTORY(sqlanywhere) #new_geometry
ADD_SUBDIRECTORY(gdal)

IF (POSTGRES_FOUND)
  #ADD_SUBDIRECTORY(postgres) #new_geometry
ENDIF (POSTGRES_FOUND)

IF (SPATIALITE_FOUND OR WITH_INTERNAL_SPATIALITE)
#  ADD_SUBDIRECTORY(spatialite)
ENDIF (SPATIALITE_FOUND OR WITH_INTERNAL_SPATIALITE)

IF (EXPAT_FOUND)
  #ADD_SUBDIRECTORY(gpx) #new_geometry
  #ADD_SUBDIRECTORY(wfs) #new_geometry
ENDIF (EXPAT_FOUND)

IF (GRASS_FOUND)
  ADD_SUBDIRECTORY(grass)
ENDIF (GRASS_FOUND)
