SET(INSTALLER_FILES
__init__.py
surveydesignplugin.py
)

PYQT4_WRAP_UI(PYUI_FILES
)

PYQT4_ADD_RESOURCES(PYRC_FILES)

ADD_CUSTOM_TARGET(survey_design ALL DEPENDS ${PYUI_FILES} ${PYRC_FILES})

INSTALL(FILES ${PYUI_FILES} DESTINATION ${QGIS_DATA_DIR}/python/plugins/survey_design)
INSTALL(FILES ${PYRC_FILES} DESTINATION ${QGIS_DATA_DIR}/python/plugins/survey_design)
INSTALL(FILES ${INSTALLER_FILES} DESTINATION ${QGIS_DATA_DIR}/python/plugins/survey_design)
